# pacai

./: .gitignore  .mypy.ini  LICENSE  LICENSE-code  LICENSE-noncode  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.ci/: build_site.sh
.ci/html/: index.html
.github/workflows/: main.yml
pacai/: __init__.py
pacai/agents/: __init__.py  cheating.py  dummy.py  gowest.py  greedy.py  leftturn.py  mdp.py  minimax.py  random.py  scripted.py  searchproblem.py  testing.py  userinput.py
pacai/capture/: __init__.py  __main__.py  agents.py  bin.py  board.py  game.py  game_test.py  gamestate.py  team.py
pacai/core/: __init__.py  action.py  agent.py  agentaction.py  agentinfo.py  board.py  board_test.py  features.py  font.py  game.py  gamestate.py  gamestate_test.py  log.py  mdp.py  search.py  spritesheet.py  spritesheet_test.py  ticket.py  ticket_test.py  ui.py
pacai/eightpuzzle/: __init__.py  __main__.py  bin.py  board.py  problem.py
pacai/gridworld/: __init__.py  __main__.py  bin.py  board.py  game.py  gamestate.py  mdp.py
pacai/pacman/: __init__.py  __main__.py  bin.py  board.py  features.py  game.py  gamestate.py  textui.py
pacai/resources/: __init__.py
pacai/search/: __init__.py  common.py  distance.py  distance_test.py  food.py  mazetiny.py  position.py  random.py
pacai/student/: __init__.py  capture-team.txt  capture.py  learning.py  learning_questions.py  multiagents.py  (+1 more)
scripts/: check_lint.sh  check_python_version.sh  check_strict_types.sh  check_types.sh  gen_docs.sh  gen_test_data.sh  profile.sh  serialization_profile.py
(+164 files in other folders)
